Corrected file placement errors in whitelist user editing visibility

--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,11 @@ pre .highlightText {
   visibility: hidden;
 }
 
+#visibility {
+  visibility: hidden;
+  float: right;
+}
+
 .form {
   margin: 10px;
 }
